--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-# Example environment variables for the backend
+# Example environment variables for the backend (SQLite)
 # Copy this to backend/.env and fill in the real values before running.
 
-# MongoDB connection string
-MONGO_URI=mongodb://localhost:27017/secure-file-sharing
+# Path to SQLite database file (relative to project root or absolute path)
+# Example: DATABASE_FILE=./backend/data/database.sqlite
+DATABASE_FILE=./backend/data/database.sqlite
 
 # JWT secret used to sign tokens
 JWT_SECRET=replace_with_a_long_random_secret
